--- a/app/views/styles/theme-grid/theme-grid.scss
+++ b/app/views/styles/theme-grid/theme-grid.scss
@@ -1,6 +1,7 @@
 // variables
 @import "../component/variables";
 @import "../../../../node_modules/enketo-core/src/sass/grid/variables";
+@import "../../../../node_modules/enketo-core/src/sass/formhub/variables";
 @import "../../../../node_modules/enketo-core/src/sass/core/variables";
 
 // fonts
