--- a/app/views/styles/component/_common.scss
+++ b/app/views/styles/component/_common.scss
@@ -4,6 +4,7 @@
 @import "feedback-bar";
 @import "notification";
 @import "fieldsubmission";
+@import "common-oc";
 
 html {
     // For some reason a height of 100% causes the body to not extend to the bottom
