changed: close and submit button on top of each other in non-pages-mode, closes https://github.com/kobotoolbox/enketo-express/issues/673

--- a/app/views/styles/component/_fieldsubmission.scss
+++ b/app/views/styles/component/_fieldsubmission.scss
@@ -33,6 +33,15 @@
 }
 */
 
+// regular non-pages-mode webform
+.form-footer .form-footer__content__main-controls {
+    #finish-form, #close-form {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .pages ~ .form-footer {
     .form-footer {
         &__content {
