fixed: fs button locations are messed up when form is displayed in larger-than-expected width,
closes https://github.com/kobotoolbox/enketo-express/issues/675

--- a/app/views/styles/component/_fieldsubmission.scss
+++ b/app/views/styles/component/_fieldsubmission.scss
@@ -62,7 +62,7 @@
                     }
                 }
 
-                .previous-page, .finish-form, .next-page {
+                .previous-page, #finish-form, .next-page {
                     margin-left: $marg;
                     margin-right: $marg;
                     max-width: calc(33% - (2 * #{$marg}));
@@ -103,7 +103,7 @@
 
                 #close-form {
                     display: block;
-                    margin: 0 100px 20px 100px;
+                    margin: 0 30% 20px 30%;
                     order: 4;
                 }
 
