changed: more vertical space for fs feedback,
https://github.com/kobotoolbox/enketo-express/issues/679

--- a/app/views/styles/component/_fieldsubmission.scss
+++ b/app/views/styles/component/_fieldsubmission.scss
@@ -2,6 +2,7 @@
     order: 15;
     color: #555;
     font-size: 12px;
+    line-height: 1.5em;
     padding-right: 10px;
     max-width: 160px;
     white-space: nowrap;
