added: Swedish translations

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -46,6 +46,8 @@ block content
           li= t("langs.no")
         when "fi"
           li= t("langs.fi")
+        when "sv"
+          li= t("langs.sv")
         when "lo"
           li= t("langs.lo")
         when "sk"
