changed: hide next/previous buttons when they are disabled,
closes https://github.com/kobotoolbox/enketo-express/issues/677

--- a/app/views/styles/component/_fieldsubmission.scss
+++ b/app/views/styles/component/_fieldsubmission.scss
@@ -83,6 +83,7 @@
 
                     &.disabled {
                         display: block;
+                        visibility: hidden;
                     }
                 }
 
@@ -98,9 +99,8 @@
                     order: 3;
 
                     &.disabled {
-                        @extend .btn-default;
-
                         display: block;
+                        visibility: hidden;
                     }
                 }
 
