--- a/app/views/styles/theme-plain/_form_plain.scss
+++ b/app/views/styles/theme-plain/_form_plain.scss
@@ -10,4 +10,5 @@
 @import "../../../../node_modules/enketo-core/src/sass/core/pages";
 @import "../component/widgets";
 @import "../../../../node_modules/enketo-core/src/sass/core/slider";
+@import "../../../../node_modules/enketo-core/src/sass/core/dropdown";
 @import "../../../../node_modules/enketo-core/src/sass/core/responsive";
