added: readonly views (see /survey/view* and /instance/view* in API)
https://github.com/kobotoolbox/enketo-express/issues/147

--- a/app/views/surveys/component/_form-footer.pug
+++ b/app/views/surveys/component/_form-footer.pug
@@ -15,6 +15,8 @@ section.form-footer
         button#validate-form.btn.btn-primary.hide
           i.icon.icon-check= ' '
           | #{t('formfooter.validate.btn')}
+      else if type === 'view'
+
       else
         button#submit-form.btn.btn-primary.hide
           i.icon.icon-check= ' '
