--- a/app/views/surveys/component/_form-footer.pug
+++ b/app/views/surveys/component/_form-footer.pug
@@ -16,7 +16,7 @@ section.form-footer
           i.icon.icon-check= ' '
           | #{t('formfooter.validate.btn')}
       else if type === 'view'
-
+        button#close-form.btn.btn-default.hide #{t('alert.default.button')}
       else
         button#submit-form.btn.btn-primary.hide
           i.icon.icon-check= ' '
