--- a/app/views/styles/theme-grid/_form-grid.scss
+++ b/app/views/styles/theme-grid/_form-grid.scss
@@ -4,3 +4,11 @@
 @import "../../../../node_modules/enketo-core/src/sass/core/slider";
 @import "../../../../node_modules/enketo-core/src/sass/core/dropdown";
 @import "../../../../node_modules/enketo-core/src/sass/grid/main";
+
+.btn.remove {
+    margin-right: -26px;
+    margin-left: -26px;
+    .icon {
+        margin: 0 4px;
+    }
+}
