changed: narrowed down the scope of default button modifications inside questions,
https://github.com/kobotoolbox/enketo-literacy-test-widget/issues/20

--- a/app/views/styles/component/_buttons.scss
+++ b/app/views/styles/component/_buttons.scss
@@ -260,7 +260,7 @@ button::-moz-focus-inner {
 
 // fixes (would be nice if these weren't necessary):
 
-.question .btn-default {
+.question:not(.or-appearance-literacy) .btn-default {
     padding: 0 15px;
 }
 
