--- a/app/views/styles/theme-formhub/theme-formhub.scss
+++ b/app/views/styles/theme-formhub/theme-formhub.scss
@@ -37,5 +37,6 @@
 @import "../component/form_header";
 @import "../component/form_footer";
 
-// ie patch
-@import "../component/iefix";
+// IE11 patches
+@import "../../../../node_modules/enketo-core/src/sass/core/iefix";
+@import "../../../../node_modules/enketo-core/src/sass/formhub/iefix";
