--- a/app/views/styles/theme-grid/theme-grid.scss
+++ b/app/views/styles/theme-grid/theme-grid.scss
@@ -38,5 +38,7 @@
 @import "../component/form_header";
 @import "../component/form_footer";
 
-// ie patch
-@import "../component/iefix";
+// IE11 patches
+@import "../../../../node_modules/enketo-core/src/sass/core/iefix";
+@import "../../../../node_modules/enketo-core/src/sass/formhub/iefix";
+@import "../../../../node_modules/enketo-core/src/sass/grid/iefix";
