--- a/app/views/styles/theme-plain/theme-plain.scss
+++ b/app/views/styles/theme-plain/theme-plain.scss
@@ -34,5 +34,5 @@
 @import "../component/form_header";
 @import "../component/form_footer";
 
-// ie patch
-@import "../component/iefix";
+// IE11 patches
+@import "../../../../node_modules/enketo-core/src/sass/core/iefix";
