changed: restored button height of select pulldown

--- a/app/views/styles/component/_buttons.scss
+++ b/app/views/styles/component/_buttons.scss
@@ -264,7 +264,7 @@ button::-moz-focus-inner {
     padding: 0 15px;
 }
 
-.btn-default.dropdown-toggle {
+.question .btn-default.dropdown-toggle {
     padding: 7px 15px;
 }
 
