--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -56,6 +56,8 @@ block content
           li= t("langs.zh")
         when "cs"
           li= t("langs.cs")
+        when "pl"
+          li= t("langs.pl")
         when "nl"
           li= t("langs.nl")
         when "cimode"
