--- a/app/views/surveys/webform.pug
+++ b/app/views/surveys/webform.pug
@@ -1,8 +1,9 @@
 extends ../layout
 
 block style
+  - var media = print ? 'all' : 'print';
   link(rel='stylesheet', media='all', type='text/css' href=`${basePath}/css/theme-${defaultTheme}.css`) 
-  link(rel='stylesheet', media='print', type='text/css' href=`${basePath}/css/theme-${defaultTheme}.print.css`) 
+  link(rel='stylesheet', media=`${media}`, type='text/css' href=`${basePath}/css/theme-${defaultTheme}.print.css`) 
 
 block script
   - var suffix = (type && type !== 'preview' && type !== 'single') ? '-' + type : ''
