--- a/app/views/styles/theme-grid/theme-grid.scss
+++ b/app/views/styles/theme-grid/theme-grid.scss
@@ -17,7 +17,7 @@
 @import "../../../../node_modules/enketo-core/src/sass/core/reset";
 
 // common styles
-@import "../component/common";
+@import "../component/common-ui";
 
 // utilities
 @import "../../../../node_modules/enketo-core/src/sass/core/utilities";
