--- a/app/views/styles/theme-plain/theme-plain.scss
+++ b/app/views/styles/theme-plain/theme-plain.scss
@@ -13,7 +13,7 @@
 @import "../../../../node_modules/enketo-core/src/sass/core/reset";
 
 // common styles
-@import "../component/common";
+@import "../component/common-ui";
 
 // utilities
 @import "../../../../node_modules/enketo-core/src/sass/core/utilities";
