changed: styling of + button to create a new repeated section, https://github.com/kobotoolbox/enketo-express/issues/707

--- a/app/views/styles/component/_buttons.scss
+++ b/app/views/styles/component/_buttons.scss
@@ -287,3 +287,10 @@ button::-moz-focus-inner {
 .draw-widget__undo {
     font-size: 13px;
 }
+
+.add-repeat-btn,
+.repeat-buttons .remove {
+    .icon {
+        margin-right: 0;
+    }
+}
