--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -52,6 +52,8 @@ block content
           li= t("langs.lo")
         when "sk"
           li= t("langs.sk")
+        when "pt"
+          li= t("langs.pt")
         when "zh"
           li= t("langs.zh")
         when "cs"
