changed: updated vex, https://github.com/kobotoolbox/enketo-express/issues/904

--- a/app/views/styles/component/_modal.scss
+++ b/app/views/styles/component/_modal.scss
@@ -1,7 +1,7 @@
 @import "../../../../node_modules/vex-js/sass/vex";
 @import "../../../../node_modules/vex-js/sass/vex-theme-plain";
 
-.vex.vex.vex-theme-plain {
+.vex.vex-theme-plain {
     h3 {
         margin-top: 10px;
         color: $text-color;
