--- a/app/views/surveys/webform.pug
+++ b/app/views/surveys/webform.pug
@@ -1,8 +1,16 @@
 extends ../layout
 
 block style
+  // preload for performance
+  link(rel='preload', as='font', href=`${basePath}/fonts/OpenSans-Bold-webfont.woff`)
+  link(rel='preload', as='font', href=`${basePath}/fonts/OpenSans-Regular-webfont.woff`)
+  link(rel='preload', as='font', href=`${basePath}/fonts/fontawesome-webfont.woff?v=4.6.2`)
+
+  // critical styles inline for performance
+  style
+    include ../../../public/css/common.css
+
   - var media = print ? 'all' : 'print';
-  link(rel='stylesheet', media='all', type='text/css' href=`${basePath}/css/common.css`)
   link(rel='stylesheet', media='all', type='text/css' href=`${basePath}/css/theme-${defaultTheme}.css`) 
   link(rel='stylesheet', media=`${media}`, type='text/css' href=`${basePath}/css/theme-${defaultTheme}.print.css`) 
 
