fixed: styling interference (again) and improved accessibility of buttons,
https://github.com/kobotoolbox/enketo-express/issues/1032

--- a/app/views/surveys/component/_form-header.pug
+++ b/app/views/surveys/component/_form-header.pug
@@ -16,5 +16,5 @@ header.form-header
   .form-header__filler
   button.form-header__button--print.btn-bg-icon-only(onclick="return false;")
   span.form-language-selector.hide: span= t('form.chooseLanguage')
-  button.form-header__button--homescreen.btn-icon-only.hide(type="button")
+  button.form-header__button--homescreen.btn-icon-only.hide(type="button", aria-label="add to homescreen")
     i.icon.icon-bookmark-o 
