--- a/app/views/surveys/component/_side-slider.pug
+++ b/app/views/surveys/component/_side-slider.pug
@@ -13,6 +13,6 @@ aside.record-list.side-slider
 		span.side-slider__app-version__value
 	p.side-slider__advanced.hide
 		button.side-slider__advanced__button.flush-db.btn.btn-default(type="button")= t('advanced.flushdb')
-button.side-slider__toggle.open(type="button")
-button.side-slider__toggle.close(type="button")
+button.side-slider__toggle.open(type="button", aria-label="open")
+button.side-slider__toggle.close(type="button", aria-label="close")
 div.slider-overlay
