--- a/app/views/styles/theme-plain/theme-plain.print.scss
+++ b/app/views/styles/theme-plain/theme-plain.print.scss
@@ -1,3 +1,4 @@
 @import "../../../../node_modules/enketo-core/src/sass/core/variables";
 @import "../../../../node_modules/enketo-core/src/sass/core/mixins";
 @import "../../../../node_modules/enketo-core/src/sass/core/print";
+@import "../component/print";
