added: russian translation

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -32,6 +32,8 @@ block content
           li= t("langs.hi")
         when "ro"
           li= t("langs.ro")
+        when "ru"
+          li= t("langs.ru")
         when "el"
           li= t("langs.el")
         when "km"
