--- a/app/views/surveys/component/_form-header.pug
+++ b/app/views/surveys/component/_form-header.pug
@@ -18,3 +18,8 @@ header.form-header
   span.form-language-selector.hide: span= t('form.chooseLanguage')
   button.form-header__button--homescreen.btn-icon-only.hide(type="button", aria-label="add to homescreen")
     i.icon.icon-bookmark-o 
+  nav.pages-toc.hide(role="navigation")
+    label(for="toc-toggle")
+    input#toc-toggle.ignore(type="checkbox" value="show")                
+    ul.pages-toc__list
+    .pages-toc__overlay
