changed: JS built files are now cleaned up and better separated from JS source files

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -11,7 +11,7 @@ html(manifest=manifest, lang=language, dir=dir(language))
     link(rel="icon", type="image/png", sizes="180x180", href=`${basePath}/images/icon_180x180.png`)
     link(rel="apple-touch-icon", sizes="180x180", href=`${basePath}/images/icon_180x180.png`)
 
-    script(src=`${basePath}/js/ie11-polyfill.min.js`, nomodule)
+    script(src=`${basePath}/js/build/ie11-polyfill.min.js`, nomodule)
 
     block style
 
