--- a/app/views/surveys/webform.pug
+++ b/app/views/surveys/webform.pug
@@ -17,9 +17,9 @@ block style
 block script
   - var suffix = (type && type !== 'preview' && type !== 'single') ? '-' + type : ''
   if environment == 'production'
-    script(src=`${basePath}/js/enketo-webform${suffix}-bundle.min.js`)
+    script(src=`${basePath}/js/build/enketo-webform${suffix}-bundle.min.js`)
   else
-    script(src=`${basePath}/js/enketo-webform${suffix}-dev-bundle.js`)
+    script(src=`${basePath}/js/build/enketo-webform${suffix}-dev-bundle.js`)
  
 block content
   include component/_notification
