changed: updated enketo-core (major)

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -12,6 +12,7 @@ html(manifest=manifest, lang=language, dir=dir(language))
     link(rel="apple-touch-icon", sizes="180x180", href=`${basePath}/images/icon_180x180.png`)
 
     script(src=`${basePath}/js/build/ie11-polyfill.min.js`, nomodule)
+    script(src=`${basePath}/js/build/obscure-ie11-polyfills.js`, nomodule)
 
     block style
 
